--- a/gb18030-24.html
+++ b/gb18030-24.html
@@ -1,1 +1,1 @@
-<!DOCTYPE HTML><meta charset="gb18030"><p>                       
+<!DOCTYPE HTML><meta charset="GB18030"><p>                       
